--- a/app/android/WhatPlaneIsThat/app/src/main/AndroidManifest.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
