--- a/app/android/WhatPlaneIsThat/app/build.gradle
+++ b/app/android/WhatPlaneIsThat/app/build.gradle
@@ -23,9 +23,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.squareup.okio:okio:1.4.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.github.japgolly.android:svg-android:2.0.6'
     compile 'com.sothree.slidinguppanel:library:3.0.0'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
+//    compile 'com.squareup.okio:okio:1.4.0'
+//    compile 'com.squareup.okhttp:okhttp:2.4.0'
+//    compile 'com.google.code.gson:gson:2.2.4'
 }
