--- a/app/android/WhatPlaneIsThat/app/src/main/AndroidManifest.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".PlaneApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".PlaneApplication">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
